fix: scrollbar issue

--- a/style.css
+++ b/style.css
@@ -45,6 +45,10 @@
     right: 0;
   }
 
-/* #content-side-layout {
+#content-side-layout {
     max-width: 20rem !important;
-} */
+}
+
+#content-area {
+    width: calc(100% - 20rem) !important;
+}
